adicionando itens no projeto

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Luiz Ramos | Front-End Dev </title>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -268,9 +269,9 @@
                 <img src="images/img-4.jpg" alt="">
                 <h3> em breve.. </h3>
                 <div class="icons">
-                    <a href="#" class="fas fa-link"></a>
-                    <a href="#" class="fas fa-share"></a>
-                    <a href="#" class="fas fa-search"></a>
+                    <a href="#portfolio" class="fas fa-link"></a>
+                    <a href="#portfolio" class="fas fa-share"></a>
+                    <a href="#portfolio" class="fas fa-search"></a>
                 </div>
             </div>
 
@@ -278,9 +279,9 @@
                 <img src="images/img-5.jpg" alt="">
                 <h3> em breve.. </h3>
                 <div class="icons">
-                    <a href="#" class="fas fa-link"></a>
-                    <a href="#" class="fas fa-share"></a>
-                    <a href="#" class="fas fa-search"></a>
+                    <a href="#portfolio" class="fas fa-link"></a>
+                    <a href="#portfolio" class="fas fa-share"></a>
+                    <a href="#portfolio" class="fas fa-search"></a>
                 </div>
             </div>
 
@@ -288,9 +289,9 @@
                 <img src="images/img-6.jpg" alt="">
                 <h3> em breve.. </h3>
                 <div class="icons">
-                    <a href="#" class="fas fa-link"></a>
-                    <a href="#" class="fas fa-share"></a>
-                    <a href="#" class="fas fa-search"></a>
+                    <a href="#portfolio" class="fas fa-link"></a>
+                    <a href="#portfolio" class="fas fa-share"></a>
+                    <a href="#portfolio" class="fas fa-search"></a>
                 </div>
             </div>
 
